# rvdasm

./: .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md
examples/: dasm.rs  dasm_all.rs  dasm_elf.rs  dasm_one.rs
src/: args.rs  disassembler.rs  insn.rs  isa.rs  isa_consts.rs  lib.rs
tests/: decode_all.rs  decode_one.rs
tests/data/: test.dump  test.elf
