[package]
name = "rvdasm"
version = "0.1.1"
edition = "2024"
description = "A RISC-V disassembler written in Rust"
license = "MIT"
repository = "https://github.com/iansseijelly/rvdasm"
readme = "README.md"
keywords = ["risc-v", "disassembler", "isa"]
authors = ["iansseijelly <iansseijelly@berkeley.edu>"]

[dependencies]
once_cell = "1.17.0"

[dev-dependencies]
object = "0.36"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.20"